# reactor

./: .env  bun.lockb  package.json  tsconfig.app.json
scripts/: build  dev
src/: App.tsx  global.d.ts  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: common.rs  config.rs  init.rs  main.rs  types.rs
src/app/: globals.css  layout copy.tsx.bak  layout.tsx  page.tsx
src/app/components/: client.tsx  connection-card.tsx  container-card.tsx  container.tsx  icon-wrappers.tsx  image-card.tsx  modal-section.tsx  network-card.tsx  volume-card.tsx
src/app/components/modals/: build-image.tsx  connections.tsx  container-diff.tsx  container-exec.tsx  container-explorer.tsx  container-logs.tsx  container-rename.tsx  container-stats.tsx  inspect.tsx  prune.tsx  pull-image.tsx  run-container.tsx  settings.tsx  terminal.tsx  top.tsx
src/app/connections/: page.tsx
src/app/containers/: page.tsx
src/app/images/: page.tsx
src/app/lib/: hooks.ts  types.ts  ws.ts
src/app/lib/bindings/: ConnectionCreateParams.ts  ConnectionCreateResponse.ts  ConnectionDeleteParams.ts  ConnectionDeleteResponse.ts  ConnectionRequestParams.ts  ConnectionRequestResponse.ts  ConnectionTestParams.ts  ConnectionTestResponse.ts  ConnectionUpdateParams.ts  ConnectionUpdateResponse.ts  ConnectionUpsertBody.ts  ContainerArchiveParams.ts  ContainerCommandParams.ts  ContainerCommandResponse.ts  ContainerDiff.ts  ContainerDiffParams.ts  ContainerDiffResponse.ts  ContainerExecCommandParams.ts  ContainerExecParams.ts  ContainerExportEventParams.ts  ContainerExportParams.ts  ContainerGetParams.ts  ContainerGetResponse.ts  ContainerKillParams.ts  ContainerListParams.ts  ContainerLogsParams.ts  ContainerLogsResponse.ts  ContainerLsParams.ts  ContainerReloadParams.ts  ContainerRemoveParams.ts  ContainerRenameParams.ts  ContainerRenameResponse.ts  ContainerRestartParams.ts  ContainerRestartResponse.ts  ContainerRunParams.ts  ContainerRunResponse.ts  ContainerStartParams.ts  ContainerStartResponse.ts  ContainerStatsParams.ts  ContainerStatsResponse.ts  (+23 more)
src/app/networks/: page.tsx
src/app/volumes/: page.tsx
